2001-10-28  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-base.c (yelp_base_new): use the scrollkeeper parser
	instead of devhelp.

	* src/scrollkeeper-parser.c:
	(scrollkeeper_parser_parse): call _trim_ with doc->xmlRootNode.
	(scrollkeeper_parser_trim_empty_branches): now actually works.
	(scrollkeeper_parser_parse_book): don't call ..._tree_empty. All
	empty branches has been removed.
	(scrollkeeper_parser_tree_parse_section): dito.

	* src/yelp-book.c (yelp_book_section_new): accept uri == NULL and
	don't ref it, if it is.
	(yelp_book_add_section): accept uri == NULL.

	* src/scrollkeeper-parser.c: started work on building index from
	Scrollkeeper.

	* src/devhelp-parser.c (devhelp_parser_parse_book): use xmlChar
	instead of gchar.

	* vfs-help-module/help-method.c 
	(help_name_to_local_path): gnome_i18n_get_language_list returns
	const GList.

2001-10-27  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view.c (yelp_view_open_uri): set the document to show
	  the beginning.

	* src/Makefile.am: 
	- Don't build ghelp-test.
	(yelp_SOURCES): don't include ghelp-uri.[ch].
